--- a/app/views/user_templates/show.html.erb
+++ b/app/views/user_templates/show.html.erb
@@ -1,24 +1,23 @@
-<h1><%= @the_user.username %></h1>
+<h1><%= @the_user.username %><h1>
 
 <dl>
-  <dt>
-    ID
-  </dt>
+  <dt>ID</dt>
+  <dd><%= @the_user.id %></dd>
 
+  <dt>Edit user</dt>
   <dd>
-    <%= @the_user.id %>
-  </dd>
+    <form action="/update_user/<%= @the_user.username %>" method="post">
+      <div>
+        <label for="browser_username">
+          Username
+        </label>
 
-  <dt>
-    Edit user
-  </dt>
+        <input type="text" id="browser_username" name="query_username" value="<%= @the_user.username %>">
+      </div>
 
-  <dd>
-    <form action="/update_user/<%= @the_user.id %>" method="post">
-      <label for="username_box">Username</label>
-      <input id="username_box" type="text" name="query_username" value="<%= @the_user.username %>">
-
-      <button>Update user</button>
+      <button>
+        Update user
+      </button>
     </form>
   </dd>
 </dl>
@@ -33,18 +32,18 @@
 
     <th>
       Owner
-    </th>
+    </th> 
 
     <th>
       Caption
-    </th>
+    </th> 
 
     <th>
       Posted
-    </th>
+    </th> 
 
     <th>
-    </th>
+    </th>   
   </tr>
 
   <% @the_user.own_photos.each do |a_photo| %>
@@ -57,11 +56,15 @@
         <%= a_photo.poster.username %>
       </td>
 
-      <td><%= a_photo.caption %></td>
-
-      <td><%= a_photo.created_at %></td>
+      <td>
+        <%= a_photo.caption %>
+      </td>
 
       <td>
+        <%= a_photo.created_at %>
+      </td>
+
+     <td>
         Show details
       </td>
     </tr>
